discussion/kv_engine/165939/165939_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49526: Update MagmaCompactionCB to set it's magma::Status

Update MagmaCompactionCB so that it sets it's magma::Status code if it
encounters a failure, so that we can cancel the compaction. As it might
not be possible to continue with it if for instance the in memory
vbucket has been destroyed.

To enable this change update we've also modified compactionCallBack()
and compactionCore() of MagmaKVStore to return a pair of a magma::Status
and a bool if to drop the doc.

Change-Id: Ic07cd4b09b5f649d2d5b5e6dc1a6b68e09ce12e4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-11-22 15:15:50.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-22 15:34:50.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35577/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2467:13:
error: enumeration value "Cancel" not handled in switch [-Werror,-Wswitch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35577/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14104/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2467:13: error: enumeration value "Cancel" not handled in switch [clang-diagnostic-switch]
    switch (status.ErrorCode()) {
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14104/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2467:13:
error: enumeration value "Cancel" not handled in switch [clang-diagnostic-switch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14104/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14896/ : FAILURE

Compile error at [2021-11-22T15:19:55.592Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2467:13:
error: enumeration value "Cancel" not handled in switch [-Werror,-Wswitch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14896/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3737/ : FAILURE

Compile error at [2021-11-22T15:19:34.292Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2467:13:
error: enumeration value "Cancel" not handled in switch [-Werror,-Wswitch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3737/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16009/ : FAILURE

Compile error at [2021-11-22T15:18:24.399Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2467:12:
error: enumeration value ?Cancel? not handled in switch [-Werror=switch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16009/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16739/ : FAILURE

Compile error at [2021-11-22T15:18:02.616Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2467:13:
error: enumeration value "Cancel" not handled in switch [-Werror,-Wswitch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16739/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24094/ : FAILURE

Compile error at [2021-11-22T15:19:33.396Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master@3/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2467:13:
error: enumeration value "Cancel" not handled in switch [-Werror,-Wswitch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24094/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3812/ : FAILURE

Compile error at [2021-11-22T15:23:39.808Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@6/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2467:12:
error: enumeration value ?Cancel? not handled in switch [-Werror=switch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3812/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41902/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12912/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15726/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-22 16:03:09.000000000
Message: 
Patch Set 4: -Code-Review

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16740/ : FAILURE

ThreadSanitizer issue: heap-use-after-free /opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/std_function.h:248 in std::_Function_base::_M_empty() const  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16740/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24095/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24095/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14897/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35578/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41903/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14105/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12913/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3738/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15727/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16010/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3813/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
